# dccl

./: .bzrignore  .gitignore  .mailmap  AUTHORS  CMakeLists.txt  COPYING  README.md  build.sh  dccl.cpp  dccl.h  dccl_field_codec.cpp  version.txt
src/: CMakeLists.txt  any.h  binary.h  bitset.cpp  bitset.h  cli_option.h  codec.cpp  codec.h  common.h  dccl.cpp  dccl.h  dccl_bitset.cpp  dccl_bitset.h  dccl_ccl_compatibility.cpp  dccl_ccl_compatibility.h  dccl_common.h  dccl_exception.h  dccl_field_codec.cpp  dccl_field_codec.h  dccl_field_codec_arithmetic.h  dccl_field_codec_default.cpp  dccl_field_codec_default.h  dccl_field_codec_default_message.cpp  dccl_field_codec_default_message.h  dccl_field_codec_fixed.h  dccl_field_codec_helpers.cpp  dccl_field_codec_helpers.h  dccl_field_codec_manager.cpp  dccl_field_codec_manager.h  dccl_field_codec_typed.h  dccl_type_helper.cpp  dccl_type_helper.h  def.h  default_field_codec.h  dynamic_conditionals.cpp  dynamic_conditionals.h  dynamic_conditions.cpp  dynamic_conditions.h  dynamic_protobuf_manager.cpp  dynamic_protobuf_manager.h  (+30 more)
src/acomms/: CMakeLists.txt
src/acomms/modemdriver/: abc_driver.h
src/apps/: CMakeLists.txt
src/apps/acomms/: CMakeLists.txt
src/apps/analyze_dccl/: CMakeLists.txt  analyze_dccl.cpp
src/apps/dccl/: CMakeLists.txt  dccl_tool.cpp  dccl_tool.proto
src/apps/pb_plugin/: CMakeLists.txt  gen_units_class_plugin.h  option_extensions.proto  pb_plugin.cpp  test.proto
src/arithmetic/: CMakeLists.txt  dccl_field_codec_arithmetic.cpp  dccl_field_codec_arithmetic.h  field_codec_arithmetic.cpp  field_codec_arithmetic.h
src/arithmetic/protobuf/: arithmetic.proto  arithmetic_extensions.proto
src/b64/: cdecode.c  cdecode.h  cencode.c  cencode.h  decode.h  encode.h
src/ccl/: CMakeLists.txt  WhoiUtil.cpp  WhoiUtil.h  ccl_compatibility.cpp  ccl_compatibility.h  dccl_ccl_compatibility.cpp  dccl_ccl_compatibility.h
src/ccl/protobuf/: ccl.proto  ccl_extensions.proto
src/codecs2/: default_field_codec_impl.h  field_codec_default.cpp  field_codec_default.h  field_codec_default_message.cpp  field_codec_default_message.h
src/codecs3/: default_field_codec_impl.h  field_codec_default.cpp  field_codec_default.h  field_codec_default_message.cpp  field_codec_default_message.h  field_codec_presence.h  field_codec_var_bytes.cpp  field_codec_var_bytes.h
src/codecs4/: default_field_codec_impl.h  field_codec_default.h  field_codec_default_message.cpp  field_codec_default_message.h  field_codec_hash.h  field_codec_presence.h  field_codec_var_bytes.h
src/dccl/: CMakeLists.txt  dccl_bitset.cpp  dccl_ccl_compatibility.h  dccl_common.h  dccl_field_codec.h  dccl_field_codec_default_message.cpp
src/doc/: CMakeLists.txt  dccl-dev.doxy.in  dccl-dev.doxy.in.bak  doxy2html.sh  doxy2pdf.sh  idl_codecs.tex
src/doc/doxy_body/: codecs.dox  idl.dox  main.dox
src/doc/images/: acomms_component.eps.REMOVED.git-id  acomms_sequence.eps.REMOVED.git-id  auv_community.eps.REMOVED.git-id  bistatic3.eps.REMOVED.git-id  dccl-20cols.eps  dccl-20cols.eps.REMOVED.git-id  dccl-25cols.eps  dccl-25cols.eps.REMOVED.git-id  dccl-50cols.eps  dccl-50cols.eps.REMOVED.git-id  dccl-header.eps.REMOVED.git-id  dccl-schematic.eps.REMOVED.git-id  dccl-tiny.eps  dccl-tiny.eps.REMOVED.git-id  dccl_example.eps.REMOVED.git-id  dclt_component.eps.REMOVED.git-id  glogger-example.eps.REMOVED.git-id  glogger-gui.eps.REMOVED.git-id  goby-acomms-background-sequence.eps.REMOVED.git-id  goby-acomms-detailed-overview.eps.REMOVED.git-id  goby-acomms-mmdriver-mpc.eps.REMOVED.git-id  goby-acomms-mmdriver-muc.eps.REMOVED.git-id  goby-acomms-mmdriver-pdt.eps.REMOVED.git-id  goby-acomms-mmdriver-pnt.eps.REMOVED.git-id  goby-acomms-mmdriver-rate0.eps.REMOVED.git-id  goby-acomms-mmdriver-rate2.eps.REMOVED.git-id  goby-acomms-overview.eps.REMOVED.git-id  goby-acomms-send-message-sequence.eps.REMOVED.git-id  gobysoft_logo.eps.REMOVED.git-id  gobysoft_logo_image_only.eps.REMOVED.git-id  hello_world_sequence.eps.REMOVED.git-id  hello_world_sketch.eps.REMOVED.git-id  hello_world_structure.eps.REMOVED.git-id  liaison_commander.png.REMOVED.git-id  liaison_scope.png.REMOVED.git-id  priority_graph.eps.REMOVED.git-id  slots.eps.REMOVED.git-id  slots_decentralized.eps.REMOVED.git-id  slots_polled.eps.REMOVED.git-id
src/doc/markdown/: page01_main.md  page02_idl.md  page03_codecs.md
src/doc/user_manual/: user_manual.pdf.REMOVED.git-id
src/internal/: default_field_codec.h  field_codec_data.h  field_codec_message_stack.cpp  field_codec_message_stack.h  protobuf_cpp_type_helpers.h  type_helper.cpp  type_helper.h
src/junk/acomms/: acomms_constants.h  acomms_helpers.h
src/junk/util/: dynamic_protobuf_manager.cpp  dynamic_protobuf_manager.h
src/native_protobuf/: CMakeLists.txt  dccl_native_protobuf.cpp  dccl_native_protobuf.h
src/protobuf/: ccl.proto  dccl.proto  logger.proto  option_extensions.proto
src/share/: header_lib.txt  header_lib_gs.txt  update_copyright.sh
src/test/: CMakeLists.txt  suppressions.lsan.txt
src/test/acomms/: CMakeLists.txt
src/test/bitset1/: CMakeLists.txt  test.cpp
src/test/dccl1/: CMakeLists.txt  test.cpp
src/test/dccl10/: test.cpp  test.proto
src/test/dccl2/: CMakeLists.txt  test.cpp
src/test/dccl3/: header.proto  test.cpp  test.proto
src/test/dccl4/: CMakeLists.txt  test.cpp
src/test/dccl5/: test.cpp
src/test/dccl6/: test.cpp
src/test/dccl7/: CMakeLists.txt
src/test/dccl8/: test.cpp  test.proto
src/test/dccl9/: CMakeLists.txt  test.cpp
src/test/dccl_all_fields/: CMakeLists.txt  test.cpp  test.proto
src/test/dccl_arithmetic/: CMakeLists.txt  test.cpp  test.proto  test_arithmetic.proto
src/test/dccl_ccl/: CMakeLists.txt  test.cpp  test.proto
src/test/dccl_codec_group/: CMakeLists.txt  test.cpp  test.proto
src/test/dccl_custom_id/: CMakeLists.txt  test.cpp  test.proto
src/test/dccl_custom_id_ccl/: CMakeLists.txt  test.cpp
src/test/dccl_custom_message/: CMakeLists.txt  test.cpp  test.proto
src/test/dccl_default_id/: CMakeLists.txt  test.cpp  test.proto
src/test/dccl_dynamic_conditions/: .gitignore  CMakeLists.txt  (+3 more)
(+193 files in other folders)
